@@ -546,7 +546,7 @@ fgetpos
 fgets
 fgetwc
 fgetws
-floor
+floor DATA
 fmod
 fopen
 fprintf
