@@ -673,8 +673,8 @@ fgetpos
 fgets
 fgetwc
 fgetws
-floor
-floorf
+floor DATA
+floorf DATA
 fmod
 fmodf
 fopen
