@@ -1256,7 +1256,7 @@ fgetpos
 fgets
 fgetwc
 fgetws
-floor
+floor DATA
 floorf DATA
 fmod DATA
 fmodf DATA
